# EEGNoise2Noise

./: .gitignore  README.md  Untitled.ipynb  main.py  setup.cfg
brain_denoise/: main.py  run_eval.py  train.py  utils.py
brain_denoise/data/: load_camcan.py  simluator.py  simulator.py  test_simulator.py
brain_denoise/models/: linear_net.py  modules.py
brain_denoise/visualizers/: time_series.py
